# dca_binance_investment_bot

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: black.yml  tests.yml
dca_bot/: .gitignore  binance_order.py  config_manager.py  dca_investment_parameter.py  development_setup.md  exceptions.py  global_vars.py  logger.py  main.py  order_list_manager.py  order_pair_manager.py  paths.py  pyproject.toml  requirements.txt  requirements_build_agent.txt  requirements_dev.txt  setup.cfg  tox.ini  trading_bot.py
dca_bot/binance_api_json_objects/: symbol_info_structure.json
dca_bot/configs/: .env.example  config.json  config.json.example  dca_investment_parameter.json.example
dca_bot/firebase/: firebase_messager.py  firebase_storage.py
dca_bot/src/dca_investment_bot/: DCAInvester.py  binance_order.py  calculation_details.py  config_manager.py  dca_investment_parameter.py  exceptions.py  global_vars.py  logger.py  main.py  order_fulfilled_checker_thread.py  order_list_manager.py  order_pair_manager.py  order_validator.py  paths.py  trading_bot.py
dca_bot/src/dca_investment_bot/firebase/: firebase_messager.py  firebase_storage.py
dca_bot/tests/: test_dca_investment_parameter.py
investment_bot_notifier/: settings.gradle
investment_bot_notifier/app/: build.gradle
investment_bot_notifier_flutter/: README.md  pubspec.yaml
investment_bot_notifier_flutter/lib/: firebase_options.dart  main.dart
timesync/: timesync.py
utility_scripts/: README.md  dca_trading_bot.service  dca_trading_bot.service.example  dca_traiding_bot.service.example
(+22 files in other folders)
