[metadata]
name = DCA Binance Investment Bot
author = Linus045
description = DCA Investment Bot for Binance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Linus045/dca_binance_investment_bot
project_urls =
    Bug Tracker = https://github.com/Linus045/dca_binance_investment_bot/issues
license = GPLv3

[options]
install_requires =
    python-binance>=1.0
    python-dotenv>=0.19
    firebase-admin>=5.1
    google-cloud-firestore>=2.3
    pyfcm>=1.5

packages = dca_investment_bot
python_requires = >=3.7
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24
    mypy>=0.910

[options.package_data]
dca_investment_bot = py.typed

[flake8]
max-line-length = 120
extend-ignore = E203
exclude =
    .git,
    __pycache__,
